--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,9 @@
 :root {
     --color-primary: #03426a;
     --color-primary-light: #24587a;
-    --color-text: #dee2e6;
+    --color-text: #e5edf4;
     --color-text-dark: #adb5bd;
-    --color-background-100: #567ea6;
+    --color-background-100: #25394e;
     --color-background-500: #3d5e7e;
     --color-background-900: #1a2633;
     --color-red: #fa5252;
@@ -294,6 +294,7 @@ body {
     display: flex;
     flex-direction: column;
     gap: 2.4rem;
+    align-items: center;
 }
 
 .btn-add {
