--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 :root {
-    --color-primary: #03426a;
+    --color-primary: #1e4257;
     --color-primary-light: #24587a;
     --color-text: #e5edf4;
     --color-text-dark: #adb5bd;
@@ -203,8 +203,8 @@ body {
     border: none;
     background-color: var(--color-red);
     color: var(--color-background-900);
-    font-size: 0.9rem;
-    font-weight: bold;
+    font-size: 1rem;
+    font-weight: 800;
     cursor: pointer;
     transition: all 0.3s;
 }
@@ -303,7 +303,7 @@ body {
     border: none;
     border-radius: 10rem;
     font-size: 1.4rem;
-    padding: 1rem;
+    padding: 1rem 5rem;
     font-weight: bold;
     cursor: pointer;
     transition: all 0.3s;
@@ -331,12 +331,11 @@ body {
     aspect-ratio: 1;
     border-radius: 50%;
     border: none;
-    /* background-color: var(--color-text); */
-    background-color: #fff;
+    background-color: #d9e226;
     color: var(--color-background-500);
     box-shadow: 0 8px 20px rgba(0, 0, 0, 0.8);
     font-family: sans-serif;
-    font-size: 2.4rem;
+    font-size: 2.5rem;
     font-weight: bold;
     cursor: pointer;
     z-index: 999;
