Tested useRef hook

--- a/src/index.css
+++ b/src/index.css
@@ -59,8 +59,14 @@ body {
     max-width: 42rem;
     background-color: var(--color-background-500);
     border-radius: 0.9rem;
-    overflow: hidden;
+    max-height: 95%;
+    overflow-y: auto;
+    overflow-x: hidden;
     position: relative;
+}
+
+.box::-webkit-scrollbar {
+    display: none;
 }
 
 .loader {
@@ -141,8 +147,8 @@ body {
 }
 
 .list {
+    box-sizing: border-box;
     list-style: none;
-    padding: 0.8rem 0;
     overflow: hidden;
 }
 
